resolved overlapping issues with the header

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -1,6 +1,12 @@
 .headerWrapper {
   display: flex;
   justify-content: center;
+  z-index: 1000;
+  width: 100vw;
+  height: 10vh;
+  position: fixed;
+  top: 0;
+  background: #fffded; 
 }
 
 .websiteName {
