--- a/components/LeftNavBar.module.scss
+++ b/components/LeftNavBar.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   min-height: 70vh;
+  padding-top: 10vh;
   width: 5vw;
   justify-content: center;
   align-items: center;
