--- a/components/RightFeedBar.module.scss
+++ b/components/RightFeedBar.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: 1fr 5fr;
   border-left: 1px solid rgb(196, 196, 196);
+  padding-top: 10vh;
   .feedTitle {
     justify-self: center;
     align-self: center;
